--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -159,3 +159,21 @@ h6 {
 
     }
 }
+
+#hotnews {
+    background-position: center;
+}
+#div_hotnews {
+    margin-top: 400px;
+    padding: 25px 25px 0 25px;
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+}
+.div_mostview {
+    margin-top: 50px;
+    padding: 25px 25px 0 25px;
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+}
