--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,6 +54,9 @@ h6 {
 .active {
     color: #3A3A3A !important;
 }
+.nopadding {
+    padding: 0 !important;
+}
 #date_header {
     width: max-content;
     font-size: 18px;
@@ -167,6 +170,36 @@ h6 {
 .topviews {
     background-position: bottom;
 }
+#etiquette_HotNews {
+    width: 110px;
+    margin-top: -55px;
+    background-color: #F72300;
+    padding: 3px 10px 3px 10px;
+    height: 30px;
+    text-align: center;
+    color: white;
+    margin-bottom: 25px;
+}
+#etiquette_TopViewed1 {
+    width: 110px;
+    margin-top: -55px;
+    background-color: #5F35AC;
+    padding: 3px 10px 3px 10px;
+    height: 30px;
+    text-align: center;
+    color: white;
+    margin-bottom: 25px;
+}
+#etiquette_TopViewed2 {
+    width: 110px;
+    margin-top: -55px;
+    background-color: #2196F3;
+    padding: 3px 10px 3px 10px;
+    height: 30px;
+    text-align: center;
+    color: white;
+    margin-bottom: 25px;
+}
 #div_hotnews {
     position: absolute;
     bottom: 0;
@@ -209,14 +242,14 @@ h6 {
     margin-left: 10px;
 }
 .share_coms>i {
-    padding: 8px 10px 8px 8px;
+    padding: 8px 8px 8px 8px;
     font-size: 15px;
     color: white;
     background-color: #A5A5A5;
 }
 .share_coms2>i {
     padding: 8px 8px 8px 8px;
-    font-size: 15px;
+    font-size: 12px;
     color: white;
     background-color: #A5A5A5;
 }
@@ -239,15 +272,74 @@ h6 {
     }
 }
 
-#red {
-    background-color: red;
-    height: 800px;
+#TitreMobile {
+    display: inline-block;
+    width: 20%;
+    vertical-align: middle;
 }
-#blue {
-    background-color: blue;
-    height: 800px;
+#Mobile_TraitGris {
+    display: inline-block;
+    width: 80%;
+    height: 2px;
+    background-color: #A5A5A5;
 }
-#green {
-    background-color: green;
-    height: 800px;
+#Mobile_TraitViolet {
+    width: 200px;
+    height: 2px;
+    background-color: #5F35AC;
+}
+.bigImage {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+.smallImage {
+    width: 100%;
+    height: 125px;
+    object-fit: cover;
+}
+.mobileEtiquette {
+    background-color: #5F35AC;
+    color: white;
+    width: 80px;
+    text-align: center;
+}
+.mobileEtiquette>p {
+    padding: 3px 3px 3px 3px;
+}
+.mobileEtiquetteSmall {
+    background-color: #5F35AC;
+    color: white;
+    width: 60px;
+    text-align: center;
+}
+.mobileEtiquetteSmall>p {
+    font-size: 12px;
+    padding: 3px 3px 3px 3px;
+}
+.creditPost {
+    font-weight: 700;
+}
+.petitPost>h4 {
+    font-size: 13px;
+}
+.subtitleLittlePost {
+    font-size: 12px;
+}
+.littlecontainer_social_coms {
+    padding: 0 !important;
+}
+.littlecontainer_social_coms>p {
+    display: inline-block;
+    color: #A5A5A5;
+}
+.littlecontainer_social_coms>p>span {
+    color: #3A3A3A;
+    font-weight: bold;
+}
+.littleshare_coms {
+    font-size: 12px;
+}
+.littleshare_coms2 {
+    font-size: 12px;
 }
