--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -276,6 +276,15 @@ h6 {
     .petitPost>h4 {
         font-size: 20px !important;
     }
+    #newslatter {
+        width: 60%;
+
+    }
+    #buttonNewslatter {
+        width: 20%;
+        margin-left: 10%;
+
+    }
 }
 
 .TitreCategory {
@@ -534,4 +543,46 @@ h6 {
     vertical-align: middle;
     margin-top: -10px;
     font-weight: 600;
+    font-family: 'Roboto', serif;
+}
+iframe {
+    width: 100%;
+}
+#videoContainer {
+    background-color: #e3e3e3;
+    padding: 50px;
+    margin-top: 25px;
+}
+#newslatterH2 {
+    color: #3A3A3A;
+
+}
+#newslatterH2>span {
+    color: #F72300;
+}
+#labelleNewslatter {
+    display: none;
+}
+#newslatter {
+    width: 69%;
+    height: 50px;
+    padding: 5px;
+    font-size: 11px;
+    border-width: 1px;
+    border-color: #CCCCCC;
+    background-color: transparent;
+    color: #000000;
+    border-style: solid;
+    border-radius: 5px;
+    box-shadow: -50px 0px 0px rgba(66,66,66,.0);
+    text-shadow: 0px 0px 5px rgba(66,66,66,.75);
+}
+#buttonNewslatter {
+    width: 20%;
+    margin-left: 10%;
+    border: 0;
+    background-color: #f15858;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
